--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "del": "^1.1.1",
     "gulp": "git://github.com/gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-cjsx": "^2.0.0",
     "gulp-coffee": "^2.3.1",
     "gulp-html-replace": "^1.4.4",
     "gulp-imagemin": "^2.2.0",
@@ -35,6 +36,9 @@
     "directories": {
       "lib": "src/scripts",
       "packages": "jspm_packages"
+    },
+    "dependencies": {
+      "react": "npm:react@^0.12.2"
     }
   }
 }
